# XEngine

./: .gitignore  .gitmodules  CMakeLists.txt  run_with_xcode.sh
Sandbox/: CMakeLists.txt  XEngineProfile-Runtime.json  XEngineProfile-Shutdown.json  XEngineProfile-Startup.json  imgui.ini
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  (+3 more)
XEngine-Editor/: CMakeLists.txt
XEngineInput/: CMakeLists.txt  imgui.ini
Xengine/src/: CMakeLists.txt  XEngine.h  xepch.cpp  xepch.h
Xengine/src/Platform/: CMakeLists.txt
Xengine/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Xengine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Xengine/src/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Xengine/src/Xengine/: Application.cpp  Application.h  CMakeLists.txt  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Xengine/src/Xengine/Core/: Base.h  Buffer.h  Core.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Xengine/src/Xengine/Debug/: Instrumentor.h
Xengine/src/Xengine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Xengine/src/Xengine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Xengine/src/Xengine/Math/: Math.cpp  Math.h
Xengine/src/Xengine/Renderer/: Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  OrthographicCameraController.cpp  OrthographicCameraController.h
Xengine/src/Xengine/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Xengine/src/Xengine/Utils/: PlatformUtils.cpp  PlatformUtils.h
(+28 files in other folders)
